added feautre: replay, new and user input